--- a/database/crawler/newsplease/newsplease/config/config.cfg
+++ b/database/crawler/newsplease/newsplease/config/config.cfg
@@ -275,7 +275,7 @@ start_date = '1999-01-01 00:00:00'
 end_date = '2999-12-31 00:00:00'
 
 # If 'True' articles without a publishing date are dropped.
-strict_mode = False
+strict_mode = True
 
 
 
@@ -330,8 +330,7 @@ USER_AGENT = 'news-please (+http://www.example.com/)'
 # default: {'newsplease.pipeline.pipelines.ArticleMasterExtractor':100, 'newsplease.crawler.pipeline.HtmlFileStorage':200, 'newsplease.pipeline.pipelines.JsonFileStorage': 300}
 # Further options: 'newsplease.pipeline.pipelines.ElasticsearchStorage': 350
 ITEM_PIPELINES = {'newsplease.pipeline.pipelines.ArticleMasterExtractor':100,
-                  'newsplease.pipeline.pipelines.HtmlFileStorage':200,
-                  'newsplease.pipeline.pipelines.JsonFileStorage':300
+                  'newsplease.pipeline.pipelines.ElasticsearchStorage': 350
                   }
 
 [Pandas]
