--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,13 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+merge/data/distilbert_model/modules.json
+merge/data/distilbert_model/config.json
+merge/data/distilbert_model/binary_classification_evaluation_results.csv
+merge/data/distilbert_model/1_Pooling/config.json
+merge/data/distilbert_model/0_Transformer/vocab.txt
+merge/data/distilbert_model/0_Transformer/tokenizer_config.json
+merge/data/distilbert_model/0_Transformer/special_tokens_map.json
+merge/data/distilbert_model/0_Transformer/sentence_bert_config.json
+merge/data/distilbert_model/0_Transformer/pytorch_model.bin
+merge/data/distilbert_model/0_Transformer/config.json
