--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,14 @@ merge/data/distilbert_model/0_Transformer/special_tokens_map.json
 merge/data/distilbert_model/0_Transformer/sentence_bert_config.json
 merge/data/distilbert_model/0_Transformer/pytorch_model.bin
 merge/data/distilbert_model/0_Transformer/config.json
+.vscode/settings.json
+merge/bin/data/distilbert_model/binary_classification_evaluation_results.csv
+merge/bin/data/distilbert_model/config.json
+merge/bin/data/distilbert_model/modules.json
+merge/bin/data/distilbert_model/0_Transformer/config.json
+merge/bin/data/distilbert_model/0_Transformer/pytorch_model.bin
+merge/bin/data/distilbert_model/0_Transformer/sentence_bert_config.json
+merge/bin/data/distilbert_model/0_Transformer/special_tokens_map.json
+merge/bin/data/distilbert_model/0_Transformer/tokenizer_config.json
+merge/bin/data/distilbert_model/0_Transformer/vocab.txt
+merge/bin/data/distilbert_model/1_Pooling/config.json
