--- a/.gitignore
+++ b/.gitignore
@@ -148,3 +148,5 @@ merge/bin/data/distilbert_model/0_Transformer/special_tokens_map.json
 merge/bin/data/distilbert_model/0_Transformer/tokenizer_config.json
 merge/bin/data/distilbert_model/0_Transformer/vocab.txt
 merge/bin/data/distilbert_model/1_Pooling/config.json
+env-mla
+
